--- a/OpenSourceLibrary/开源库常见问题.md
+++ b/OpenSourceLibrary/开源库常见问题.md
@@ -1,3 +1,5 @@
+
+
 # 开源库常见的问题
 
 # 1. 网络库
@@ -74,15 +76,105 @@
 
 　　Retrofit 的主要原理是利用了 Java 的动态代理技术，把 ApiService 的方法调用集中到了 InvocationHandler.invoke，再构建了 ServiceMethod 、OkHttpClient，返回 callAdapter.adapter 的结果。
 
-　　retrofit 源码流程图：
+　　Retrofit 的最大特点就是解耦。
 
-![](Retrofit/image/retrofit源码流程图.webp)
+　　Retrofit 源码流程图：
+
+![](Retrofit/image/retrofit源码流程图.png)
+
+使用
+
+```java
+//构建 OkHttpClient 对象
+OkHttpClient okHttpClient = new OkHttpClient.Builder()
+                .connectTimeout(10, TimeUnit.SECONDS) // 连接超时
+                .readTimeout(10, TimeUnit.SECONDS) // 读取超时
+                .retryOnConnectionFailure(true) // 是否重试
+                .writeTimeout(10, TimeUnit.SECONDS) // 写入超时
+                .build();
+// 创建 Retrofit 对象，外观模式
+Retrofit retrofit = new Retrofit.Builder()
+                .baseUrl("http://test")
+				.addConverterFactory(GsonConverterFactory.create(new GsonBuilder().create())) // 解析使用 GsonConverterFactory
+                .addCallAdapterFactory(RxJavaCallAdapterFactory.create()) // 返回使用 RxJavaCallAdapterFactory
+                .client(okHttpClient) // 请求使用 OkHttpClient
+                .build();
+```
+
+
+
+```java
+public interface ApiService {
+    @GET("data/")
+    Observable<BaseResponse> getMessage(@Path("page") int page);
+
+    public static class BaseResponse {
+
+        /**
+         * 业务错误码
+         */
+        @SerializedName("F_responseNo")
+        public int responseNo;
+
+        /**
+         * 业务错误描述
+         */
+        @SerializedName("F_responseMsg")
+        public String responseMsg;
+
+        @Override
+        public String toString() {
+            return "BaseResponse{" +
+                    "responseNo=" + responseNo +
+                    ", responseMsg='" + responseMsg + '\'' +
+                    '}';
+        }
+    }
+}
+```
+
+
+
+```java
+// 获取 API 实例
+ApiService service = retrofit.create(ApiService.class);
+// 调用 getMessage 的方法请求数据
+Observable<ApiService.BaseResponse> observable = service.getMessage(1);
+```
+
+retrofit.create 源码
+
+```java
+ServiceMethod<Object, Object> serviceMethod =
+                (ServiceMethod<Object, Object>) loadServiceMethod(method);
+// 再包装成 OkHttpCall
+OkHttpCall<Object> okHttpCall = new OkHttpCall<>(serviceMethod, args); // 请求
+return serviceMethod.callAdapter.adapt(okHttpCall);
+```
+
+1. Retrofit 是使用动态代理 Proxy 对定义的接口进行处理的，当调用接口的方法时，会在动态代理的 InvocationHandler # invoke 方法对请求进行处理。 
+2. ServiceMethod 会解析接口的方法，将方法的注解解析为请求的 Request，根据用户设置配置生成具体的 CallAdapter（负责发送 HTTP 请求）、ResponseConverter（负责把服务器返回的数据转为想要的对象格式），将请求的结果使用 ResponseConverter 转为合适的 R 对象。 ServiceMethod 类的作用就是把对接口方法的调用转为一次 HTTP 调用，而且 ServiceMethod 有缓存，减少了一定的消耗。
+3. 实际是调用了 call 的 exercute()（同步） 或者 enqueue()（异步） 来完成请求。OkHttpCall 算是 OkHttp 的包装类，用它跟 OkHttp 对接。会在 OkHttpCall 中将 OkHttp 的 response 包装成 retrofit 标准下的 response，再使用 RespouseConverter 转成想要的 R 对象。默认是 OkHttpClient，当然还可以扩展一个新的 Call ，比如 HttpUrlConnectionCall。
+4. Retrofit 提供了很多的 ConverterFactory，比如 Gson、Jackson、xml、protobuff 等等，需要什么，就配置相对应的工厂，在 Service 方法上声明泛型具体类型就可以了。
+5. 生成的 CallAdapter （负责发送 HTTP 请求）有四个工厂，分别对应不同的平台：RxJava、Java8、Guava 还有一个 Retrofit 默认的。简单来说就是用来将 Call 转成 T 的一个策略。因为这里具体请求时耗时操作，所以需要 CallAdapter 去管理线程。比如 RxJava 会根据调用方法的返回值，如 Response < T > | Result < T > | Observable < T >，生成不同的 CallAdapter。实际上就是对 RxJava 的回调方式做封装。比如将 response 再拆解为 success 和 error 等。
+
+　　动态代理技术就是动态生成接口的实例类（当然生成实现类由缓存机制），并创建其实例（称之为代理），代理把对接口的调用转发给 InvocationHandler 实例，而在 InvocationHandler 的实现中，处理执行真正的逻辑（例如再次转发给真正的实现类对象），还可以进行一些有用的操作，例如统计执行时间，进行初始化和清理、对接口调用进行检查等。
+
+　　为什么要用动态代理？因为对接口所有方法的调用都会集中转发到 InvocationHandler#invoke 函数中，这样就可以集中进行处理，更方便了。
+
+　　ServiceMethod 是接口方法的抽象，主要负责解析它对应的 method 的各种参数（它有各种如 parseHeaders 的方法），比如注解（@GET）、入参，另外还负责获取 callAdapter、responseConverter 等 Retrofit 配置，好为后面的 okhttp3/Request 做好参数准备，它的 toRequest 为 OkHttp 提供 Request，toResponse 将请求结果转换为想要的数据类，可以说它承载了后续 Http 请求所需的一切参数。总的来说就是 ServiceMethod 类的作用就是把对接口方法的调用转为一次 HTTP 调用。
+
+　　一个 ServiceMethod 对象对应于一个 API interface 的一个方法。
 
 # 5. Glide 原理
 
-Glide 最简单的使用案例就是从远程服务器或者本地文件系统加载图片，把他们放在磁盘与内存缓存中，然后加载到 view 上。它可以用在全是图片的 app 中，Glide 为包含图片的滚动列表做了尽可能流畅的优化。
+　　Glide 最简单的使用案例就是从远程服务器或者本地文件系统加载图片，把他们放在磁盘与内存缓存中，然后加载到 view 上。它可以用在全是图片的 app 中，Glide 为包含图片的滚动列表做了尽可能流畅的优化。
 
 
+
+## Glide 应用遇到的问题
+
+　　使用阿里的 oss 存储图片，在后面显示 oss 的地址图片无法显示。解决放啊：自定义适配器。
 
 # 6. RxJava 原理
 
