--- a/OpenSourceLibrary/开源库常见问题.md
+++ b/OpenSourceLibrary/开源库常见问题.md
@@ -217,6 +217,9 @@ return serviceMethod.callAdapter.adapt(okHttpCall);
 1. RxJava 主要采用的是观察者模式，Obervable 作为被观察者，负责接收原始的 Observable 发出的事件，并在处理后发送给 Observer，Observer 作为观察者。
 2. Observable 并不是在创建的时候就立即开始发送事件，而是在它被订阅的时候，也就是 subscribe() 方法执行的时候开始。
 3. subscribe() 方法里会调用 OnSubscribe#call 方法，在 OnSubscribe 的 call 方法会把消息传递给观察者 Subscriber。
+4. subscribeOn() 操作符使用的是 OperatorSubscribeOn（OnSubscribe 的实现类）来完成对 OnSubscribe 的运行线程的控制，在 OperatorSubscribeOn 的 call 方法中，启动线程，在线程中完成调用上流（调用 subscribeOn() 方法前面生成的 Observable 对象的 OnSubscribe 成员）的 call() 方法进行逻辑的处理，保证了上流的工作在指定的线程工作。
+5. observerOn() 操作符使用的是 OperatorObserveOn（Operator 的实现类）来完成对 Observer 的运行线程的控制，在 OperatorObserveOn 的 call 方法中，创建了一个 ObserveOnSubscriber 对象（Subscriber 的子类，实现 Action0），在 ObserveOnSubscriber 的 onError()、onComplete() 方法中会将 ObserveOnSubscriber 发送给主线程的 handle，处理这个消息就会调用 ObserveOnSubscriber 的 call() 方法，在 call() 方法中调用下游的 onNext()、onError()、onComplete() 方法就是在主线程中了。
+6. 
 
 # 7. RabbitMQ 知识
 
