--- a/OpenSourceLibrary/开源库常见问题.md
+++ b/OpenSourceLibrary/开源库常见问题.md
@@ -217,11 +217,34 @@ return serviceMethod.callAdapter.adapt(okHttpCall);
 ## 6.2. 基本原理
 
 1. RxJava 主要采用的是观察者模式，Obervable 作为被观察者，负责接收原始的 Observable 发出的事件，并在处理后发送给 Observer，Observer 作为观察者。
+
 2. Observable 并不是在创建的时候就立即开始发送事件，而是在它被订阅的时候，也就是 subscribe() 方法执行的时候开始。
+
 3. subscribe() 方法里会调用 OnSubscribe#call 方法，在 OnSubscribe 的 call 方法会把消息传递给观察者 Subscriber。
+
 4. subscribeOn() 操作符使用的是 OperatorSubscribeOn（OnSubscribe 的实现类）来完成对 OnSubscribe 的运行线程的控制，在 OperatorSubscribeOn 的 call 方法中，启动线程，在线程中完成调用上流（调用 subscribeOn() 方法前面生成的 Observable 对象的 OnSubscribe 成员）的 call() 方法进行逻辑的处理，保证了上流的工作在指定的线程工作。
+
 5. observerOn() 操作符使用的是 OperatorObserveOn（Operator 的实现类）来完成对 Observer 的运行线程的控制，在 OperatorObserveOn 的 call 方法中，创建了一个 ObserveOnSubscriber 对象（Subscriber 的子类，实现 Action0），在 ObserveOnSubscriber 的 onError()、onComplete() 方法中会将 ObserveOnSubscriber 发送给主线程的 handle，处理这个消息就会调用 ObserveOnSubscriber 的 call() 方法，在 call() 方法中调用下游的 onNext()、onError()、onComplete() 方法就是在主线程中了。
-6. 
+
+   ![](RxJava/image/RxJava_call_stack_just_map_subscribeOn_observeOn.png)
+
+6. just() 操作符是依次向 Observer 发送数据。just() 操作符使用 JustOnSubscribe(OnSubscribe 的实现类)来处理，在 JustOnSubscribe 的 call() 方法中，会调用 subscriber 的 setProducer(Producer) 方法，而 subscriber 的 setProducer() 方法会调用 Producer 的 request() 方法，在 request() 方法中会调用 Subscriber 的 onNext() 系列方法。
+
+   ![](RxJava/image/RxJava_call_stack_just.png)
+
+7. map(Func 1) 操作符是转换数据格式。map() 操作符使用 OnSubscribeMap（OnSubscribe 的实现类），在 MapSubscriber 的 onNext() 方法中调用了 Func1 的 call() 方法，将数组进行转换。
+
+   ![](RxJava/image/RxJava_call_stack_just_map.png)
+
+8. interval() 操作符是创建一个按固定时间间隔发送整数序列的 Observable。interval 操作符使用 OnSubscribeTimerPeriodically（OnSubscribe 的实现类），在 OnSubscribeTimerPeriodically 的 call() 方法中，定时调用下流的 onNext() 方法。
+
+## 6.3. 背压
+
+　　异步环境下产生的问题：同步环境下会等待一件事处理完后再进行下一步，而异步环境下是处理完一件事，未等它得出结果接着处理下一步，在获得结果之后进行回调，再处理结果。
+
+　　发送和处理速度不统一：例如生产者生产的产品放置到缓存队列中，供消费者消费。若生产者生产的速度大于消费者消耗的速度，则会出现缓存队列溢出的问题。
+
+　　背压是一种流速控制即解决策略，例如背压中的丢弃策略，一旦发现缓存队列已满，为了整个过程顺利进行，则会丢弃最新产生的产品，避免溢出，因此背压也是一种流速控制的解决策略。
 
 # 7. RabbitMQ 知识
 
@@ -1013,3 +1036,71 @@ channe1.queueDec1are("unroutedQueue", true, fa1se, fa1se, nu11);
 
 ## 7.8. RabbitMQ 消息幂等性
 
+　　简单来说就是用户对于同一操作发起的一次请求或多次请求的结果是一致的。
+
+　　可以类比数据库的乐观锁机制，在并发场景，为了性能和数据可靠性，会在更新时加上查询时的版本，并且更新这个版本的信息。执行更新语句，以 version 作为条件，UPDATE T_REPS SET COUNT = COUNT -1，VERSION = VERSION + 1 WHERE VERSION = 1，如果执行更新时有其他人先更新了这张表的数据，那么这个条件就不生效了，也就不会执行操作了，通过这种乐观锁的机制来保障幂等性。
+
+### 7.8.1. 出现非幂等性的情况
+
+　　为了保证消息必达，一般会使用消息超时、重传和确认机制。而超时、重传、确认机制可能导致消息总线或者业务方收到重复的消息，从而对业务产生影响。
+
+　　消息发送的过程：
+
+![](J:/zhangmiao/android_learning_notes/OpenSourceLibrary/MessageQueue/image/消息发送.png)
+
+1. 消息生产者（Producer）将消息发送给 RabbitMQ 服务器。
+2. RabbitMQ 服务器收到消息，将消息放入队列中。
+3. RabbitMQ 服务器发送确认消息给生产者。
+4. RabbitMQ 服务器将消息发送给消息消费者（Consumer）。
+5. 消息消费者发送确认消息给 RabbitMQ 服务器。
+6. RabbitMQ 服务器将消息从队列中移除。
+
+　　在 RabbitMQ 从消息创建到销毁这个过程中，会有两次确认接收的过程：一次是生产者确认发出的消息被服务器接收，一次是服务器确认消息者消费了发出的消息，而在这两个确认过程中如果出现异常就会重发：
+
+1. 如果在第 3 步的时候由于网络不可达等原因，生产者没有收到确认消息，但是服务器已经成功的接收了消息，在网络重连后，重复向 RabbitMQ 发送消息，造成了服务器接收了重复的消息；
+2. 如果在第 5 步的由于网络不可达、消费者故障或者异常等原因，消费者断开了，服务器没有收到确认消息，消息会重新发送给下一个消费者（有的话），或者在网络重连后再次发送消息给该消费者，但是消费者已经成功的消费了这条消息，造成了消费者消费了重复的消息。
+
+### 7.8.2. 解决方法
+
+#### 7.8.2.1. 服务端实现幂等性
+
+　　对于每一条消息，RabbitMQ 内部生成一个全局唯一、与业务无关的 ID：inner-msg-id。当服务器接收到消息时，根据 inner-msg-id 判断消息是否重复发送，再决定是否将消息发送到队列。这样，有了这个 inner-msg-id 作为去重的依据就能保证一条消息只能一次发送到绑定的队列。
+
+#### 7.8.2.2. 消费端实现幂等性
+
+　　消费者实现幂等性，就意味着，消息永远不会消费多次，即使收到了多条一样的消息。
+
+　　业界主流的幂等性操作：
+
+1. 唯一 ID + 指纹码机制，利用数据库主键去重
+
+   思路就是首先需要根据消息生成一个全局唯一的 ID，然后还需要加上一个指纹码。
+
+   唯一 ID：如数据库的主键 id。
+
+   指纹码：业务规则标识唯一的。如时间戳 + 银行返回的唯一码。这个指纹码它并不一定是系统去生成的，而是一些外部的规则或者内部的业务规则去拼接，它的目的就是为了保障这次操作是绝对唯一的。
+
+   为什么需要指纹码？为了应对用户在一瞬间的频繁操作。
+
+   将 ID + 指纹码拼接好的值作为数据库主键，就可以进行去重了。即在消费消息之前，先去数据库查询这条消息的指纹码标识是否存在，没有就执行 insert 操作，如果有就代表已经被消费了，就不需要管了。
+
+   优点：实现简单。就一个拼接，然后查询判断是否重复。
+
+   缺点：高并发下有数据写入的性能瓶颈。
+
+   缺点解决方案：对于高并发下的数据库性能瓶颈，可以跟进 ID 进行分库分表策略，采用一些路由算法去进行分压分流。应该保证 ID 通过这种算法，消息即使投递多次都落到同一个数据库分片上，这样就由单库数据库幂等变成多库的幂等，分摊数据流量压力，提高性能。
+
+2. 利用 Redis 的原子性去实现
+
+   redis 是 单线程的，并且性能也非常好，提供了很多原子性的命令，比如可以使用 setnx 命令。
+
+   在接收到消息后将消息 ID 作为 key 执行 setnx 命令，如果执行成功就表示没有处理过这条消息，可以进行消费了，执行失败表示消息已经被消费了。
+
+   使用 redis 的原子性去实现主要需要考虑两个点：
+
+   * 是否要进行数据落库，如果落库的话，关键解决的问题是数据库和缓存如何做到原子性？数据库与缓存进行同步肯定要进行写操作，到底先写 redis 还是先写数据库，这是个问题，涉及到缓存更新与淘汰的问题。
+   * 如果不进行落库，那么都存储在缓存中，如何设置定时同步的策略（ 同步到关系型数据库 ）？缓存又如何做到数据可靠性保障呢？
+
+   关于不落库，定时同步的策略，目标主流方案有两种，第一种为双缓存模式，异步写入到缓存中，也可以异步写到数据库，但是最终会有一个回调函数检查，这样能保证最终一致性，不能保证 100% 的实时性。第二种是定时同步，比如 databus 同步。
+
+　　对于非幂等性业务可不实现幂等性业务：权衡去重所花的代码决定是否需要实现幂等性，如：购买会员卡成功，向用户发送通知消息，发送一次或者多次影响不大，不做幂等性可以省掉写去重日志的操作。
