--- a/OpenSourceLibrary/开源库常见问题.md
+++ b/OpenSourceLibrary/开源库常见问题.md
@@ -166,9 +166,29 @@ return serviceMethod.callAdapter.adapt(okHttpCall);
 
 　　一个 ServiceMethod 对象对应于一个 API interface 的一个方法。
 
-# 5. Glide 原理
+# 5. Glide
 
-　　Glide 最简单的使用案例就是从远程服务器或者本地文件系统加载图片，把他们放在磁盘与内存缓存中，然后加载到 view 上。它可以用在全是图片的 app 中，Glide 为包含图片的滚动列表做了尽可能流畅的优化。
+## 5.1. Glide 与其他图片开源库的比较
+
+　　老牌图片加载框架 UniversalImageLoader、 Google 推出的 Volley，后来的 Glide 和 Picasso，还有 Facebook 的 Fresco。每一个都非常稳定，功能也都十分强大。但是它们的使用场景基本都是重合的。
+
+　　从易用性上来讲，Glide 和 Picasso 应该都是完胜其他框架的，这两个框架都实在是太简单好用了，大多数情况下加载图片都是一行代码就能解决的，而 UniversalImageLoader 和 Fresco 则在这方面略逊一些。
+
+　　Glide 和 Picasso 这两个框架的用法非常相似，但其实它们各有特色。Picasso 比 Glide 更加简洁和轻量，Glide 比 Picasso 功能更为丰富。Glide 支持播放 GIF ，Picasso 不支持。
+
+## 5.2. 原理
+
+```java
+Glide.with(Context context).load(Strint url).into(ImageView imageView);
+```
+
+1. with() 方法就是为了得到一个 RequestManager 对象而已，然后 Glide 会根据传入的 with() 方法的参数来确定图片加载的生命周期。
+
+   如果是 Application 参数，调用  getApplicationManager() 方法来获取一个 RequestManager 对象。Application 对象的生命周期即应用程序的生命周期。
+
+   如果是非 Application 参数，调用 getSupportRequestManagerFragment 方法向当前的 Activity 当中添加一个隐藏的 Fragment（为了 Glide 直到加载的生命周期）。
+
+2. load() 方法会根据传递的参数确定使用的 streamModelLoader 和 fileDescriptorModelLoader，
 
 
 
