--- a/network/网络常见问题.md
+++ b/network/网络常见问题.md
@@ -6,7 +6,7 @@
 
 1. GET 方法用于信息获取，它对于数据库方面是安全的（没有修改信息），而 POST 方法是用于修改服务器上资源的请求。
 2. GET 请求的数据会附在 URL 之后，而 POST 方法提交的数据则放置在 HTTP 报文实体的实体中，所以 POST 方法的安全性比 GET 方法要高。
-3. GET 方法传输的数据量一般限制在 2 KB，其原因在于：GET 式通过 URL 提交数据，而 URL 本身对数据没有限制，但是不同的浏览器对于 URL 是有限制的，真正的限制取决于操作系统本身；而 POST 方法对于数据大小是无限制的，真正影响到数据大小的是服务器处理程序的能力。
+3. GET 方法传输的数据量一般限制在 2 KB，其原因在于：GET 通过 URL 提交数据，而 URL 本身对数据没有限制，但是不同的浏览器对于 URL 是有限制的，真正的限制取决于操作系统本身；而 POST 方法对于数据大小是无限制的，真正影响到数据大小的是服务器处理程序的能力。
 
 ## 1.2. 其他请求
 
