--- a/OpenSourceLibrary/开源库常见问题.md
+++ b/OpenSourceLibrary/开源库常见问题.md
@@ -176,6 +176,8 @@ return serviceMethod.callAdapter.adapt(okHttpCall);
 
 　　Glide 和 Picasso 这两个框架的用法非常相似，但其实它们各有特色。Picasso 比 Glide 更加简洁和轻量，Glide 比 Picasso 功能更为丰富。Glide 支持播放 GIF ，Picasso 不支持。
 
+　　Glide 和 Picasso 的用法是非常相似的，但是有一点差别很大。Glide 加载图片的默认格式是 RGB_565，而 Picasso 加载图片的默认格式是 ARGB_8888。ARGB_8888 格式的图片效果会更加细腻，但是内存开销会比较大，而 RGB_565 格式的图片则更加节省内存，但是图片效果上会差一些。Glide 也可以通过设置使用 ARGB_888 的数据格式。
+
 ## 5.2. 原理
 
 ```java
@@ -218,11 +220,56 @@ Glide.with(Context context).load(Strint url).into(ImageView imageView);
 
      硬盘缓存的实现也是使用的是 DiskLruCache，内存缓存是在调用 load() 方法开始就会去检查内存缓存，没有内存缓存就会进入线程，开始运行线程时才会去检查硬盘缓存。硬盘的缓存也是在请求数据完成后在线程中存储的。
 
-8. 
 
+## 5.3. Glide 的操作
 
+### 5.3.1. 添加图片变化的用法
 
-## 5.3. Glide 自定义适配器
+```java
+Glide.with(this)
+     .load(url)
+     .transform(...)
+     .into(imageView);
+```
+
+### 5.3.2. 自定义模块
+
+　　首先需要定义一个自己的模块类，并让它实现 GlideModule 接口，如下所示：
+
+```java
+public class MyGlideModule implements GlideModule {
+    @Override
+    public void applyOptions(Context context, GlideBuilder builder) {
+    }
+
+    @Override
+    public void registerComponents(Context context, Glide glide) {
+    }
+}
+```
+
+　　可以看到，在 MyGlideModule 类当中，重写了 applyOptions() 和 registerComponents() 方法，这两个方法分别就是用来更改 Glide 配置以及替换 Glide 组件的。只需要在这两个方法中加入具体的逻辑，就能实现更改 Glide 配置或者替换 Glide 组件的功能了。
+
+　　不过，目前 Glide 还无法识别自定义的 MyGlideModule，如果想要让它生效，还得在 AndroidManifest.xml 文件当中加入如下配置才行：
+
+```xml
+<manifest>
+
+    ...
+
+    <application>
+
+        <meta-data
+            android:name="com.example.glidetest.MyGlideModule"
+            android:value="GlideModule" />
+
+        ...
+
+    </application>
+</manifest>
+```
+
+　　在 < application > 标签中加入一个 meta-data 配置项，其中 android:name 指定成自定义的这个 MyGlideModule 了。 
 
 ## 5.4. Glide 应用遇到的问题
 
