--- a/OpenSourceLibrary/开源库常见问题.md
+++ b/OpenSourceLibrary/开源库常见问题.md
@@ -190,21 +190,15 @@ Glide.with(Context context).load(Strint url).into(ImageView imageView);
 
    如果是非 Application 参数，调用 getSupportRequestManagerFragment 方法向当前的 Activity 当中添加一个隐藏的 Fragment（为了 Glide 直到加载的生命周期）。
 
-2. load() 方法会根据传递的参数确定使用的 streamModelLoader 和 fileDescriptorModelLoader，创建一个 ImageVideoModelLoader 对象，streamModelLoader 和 fileDescriptorModelLoader 作为它的成员变量，DrawableTypeRequest 会创建一个 FixedLoadProvider 对象，FixedLoadProvider 持有 ImageVideoModelLoader 对象，而 DrawableTypeRequest 持有 FixedLoadProvider 对象。load() 方法返回的是 DrawableTypeRequest 对象。
-
-3. into() 方法会创建 Target 对象（负责将占位符，错误占位图，图片显示在 ImageView 上）和创建 GenericRequest 对象，1. 请求数据：GenericRequest 会创建 EngineJob 对向获取数据，EngineJob 对象会在线程持中运行获取数据的操作，获取数据的时候会先从缓存中获取，如果缓存中没有，则从资源中获取，在资源中获取数据是调用的 DataFetcher 的 loadData() 方法。2.解析数据：获得数据后调用 ResourceDecoder 类的 decode() 方法解析数据，并且会对图片进行压缩、旋转、圆角等处理，数据转换成了 Bitmap 或者 Gif 数据格式，最后会将 Bitmap 和 Gif 数据封装到 GifBitmapWrapper 中，会将获取到的 Resource 数据进行缓存。3.显示图片：将 GifBitmaoWrapper 转换为 Bitmap 或者 Gif 可以直接使用的数据后，会采用 handler 向主线程发送 Message 消息将结果传给主线程，在消息处理中会调用到 ImageViewTarget 的 setResource() 方法将图片显示到控件上。
-
-4. with() 方法如果传入的不是 Application 的 Context，就会向当前的 Context 添加一个隐藏的 fragment，这主要是为了知道加载的生命周期，而 with() 会返回一个 RequestManager 对象。
-
-5. load() 方法会创建 Glide 的实例，并调用了 Glide 的初始化，对缓存、下载等对象进行初始化，注册好 ModelLoader 的工厂模式，创建 DrawableTypeRequest 对象并返回，DrawableTypeRequest 包含 streamModelLoader 和 fileDescriptorModelLoader 两个 ModelLoader。
+2. load() 方法会创建 Glide 的实例，并调用了 Glide 的初始化，对缓存、下载等对象进行初始化，注册好 ModelLoader 的工厂模式，创建 DrawableTypeRequest 对象并返回，DrawableTypeRequest 包含 streamModelLoader 和 fileDescriptorModelLoader 两个 ModelLoader。
 
    ModelLoader 是一个工厂接口，主要目标是：1. 将特定的模型转换为可解码为资源的数据类型；2. 允许模型与视图的纬度组合以获得特定大小的资源。有一个接口是 getResourceFetcher() 返回 DataFetcher。
 
    DataFetcher 是用于延迟检索加载资源的数据的接口。方法 loadData() 用于异步从解码资源中获取数据。
 
-6. into() 方法主要分为三个部分：1. 请求数据；2. 将请求的数据解析转换为图片格式；3. 将图片显示到 ImageView 上。请求数据是使用 Engine 来开启线程来调用 Fetcher 接口的 loadData 来获取数据的。数据转码是通过 ResourceDecoder 接口的 decoder() 方法来实现的，将数据转换为图片或者 Gif 格式，并将结果分装为 Resouce 对象。将图片显示到 ImageView 的过程是先使用 ResourceTranscode 接口的 transcode() 方法将 Resouce 包含的 Bitmap 转换为可以显示的 Drawable 格式，转换完成后使用 Handle 进入 UI 线程，然后显示图片。
+3. into() 方法主要分为三个部分：1. 请求数据；2. 将请求的数据解析转换为图片格式；3. 将图片显示到 ImageView 上。into() 方法会创建 Target 对象（负责将占位符，错误占位图，图片显示在 ImageView 上，就是控制 view 的显示）和创建 GenericRequest 对象（负责请求和请求回调），1. 请求数据：GenericRequest 会创建 EngineJob 对向获取数据，EngineJob 对象会在线程池中运行获取数据的操作，获取数据的时候会先从缓存中获取，如果缓存中没有，则从资源中获取，在资源中获取数据是调用的 DataFetcher 的 loadData() 方法。2.解析数据：获得数据后调用 ResourceDecoder 类的 decode() 方法解析数据，并且会对图片进行压缩、旋转、圆角等处理，数据转换成了 Bitmap 或者 Gif 数据格式，最后会将 Bitmap 和 Gif 数据封装到 GifBitmapWrapper 中，会将获取到的 Resource 数据进行缓存。3.显示图片：将 GifBitmaoWrapper 转换为 Bitmap 或者 Gif 可以直接使用的数据后，会采用 handler 向主线程发送 Message 消息将结果传给主线程，在消息处理中会调用到 ImageViewTarget 的 setResource() 方法将图片显示到控件上。
 
-7. Glide 缓存机制
+4. Glide 缓存机制
 
    Glide 的缓存分成了两个模块，一个是内存缓存，一个是硬件缓存。内存缓存的主要作用是防止应用重复将图片数据读取到内存当中，而硬件缓存的主要作用是防止应用重复从网络或其他地方重读下载和读取数据。
 
